fix(bootstrap4-theme): fix heading spacing
Give heading elements additional top spacing if preceded by a paragraph, to ensure content is
segmented appropriately.

--- a/packages/bootstrap4-theme/src/scss/extends/_typography.scss
+++ b/packages/bootstrap4-theme/src/scss/extends/_typography.scss
@@ -17,3 +17,13 @@
     color: $uds-color-base-darkgold;
   }
 }
+
+// If there is a heading between two paragraphs, there needs to be more space above the heading than below it to ensure that content is chunked appropriately and remains legible.
+p + h1,
+p + h2,
+p + h3,
+p + h4,
+p + h5,
+p + h6 {
+  margin-top: $uds-size-spacing-4;
+}
